<resources>
    <string name="app_name">materialtest</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="next">next</string>
    <string name="title_activity_sub">SubActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="logo">logo</string>
    <string name="error_timeout">Unable to Establish Conneciton</string>
    <string name="error_auth_failure">Authentication Error</string>
    <string name="error_server_failure">Unable to Connect to Server</string>
    <string name="error_network">No Network</string>
    <string name="error_parser">Parser Error</string>
    <string name="search_hint">Enter Text Here</string>
    <string name="search_title">GradLib</string>
    <string name="saved_jobs">Saved Jobs</string>
    <string name="applied_jobs">Applied Jobs</string>
    <string name="desc">Image View for Drawer</string>
    <string name="listdesc">Fragment List View Description</string>
    <string name="about">About Us</string>
    <string name="filter">Filter</string>
    <string name="filter_logo">filterlogo</string>
    <string name="seekbar_logo">seekbar_logo</string>
    <string name="Update">Update</string>
    <string name="min_salary">RM 0</string>
    <string name="select_min_salary">Select Minimum Salary</string>
    <string name="Reset">Reset</string>
    <string name="home">Home</string>
    <string name="savedJobs">Saved Jobs</string>
    <string name="appliedJobs">Applied Jobs</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="more">MORE</string>

    <string-array name="tabs">
        <item>GRADUATE</item>
        <item>INTERNSHIP</item>
        <item>PART TIME</item>
        <item>VOLUNTEER</item>

    </string-array>

</resources>
